# langcore-dspy

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
langcore_dspy/: __init__.py  config.py  helpers.py  optimizer.py
langextract_dspy/: __init__.py  config.py  helpers.py  optimizer.py
tests/: test_dspy.py
